# vtu_result_scraper_nandan

./: .gitignore  main.py  pyproject.toml
static/: script.js
templates/: index.html
