[project]
name = "vtu_result_scraper"
version = "0.1.0"
description = "VTU Result Scraper with AI-powered CAPTCHA solver using Gemini API"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
  { name = "rana sagar" }
]

dependencies = [
  "flask==3.1.2",
  "flask-cors==6.0.1",
  "python-dotenv==0.19.2",
  "requests==2.32.3",
  "beautifulsoup4==4.13.3",
  "pandas==2.2.3",
  "urllib3==2.3.0",
  "google-genai==1.41.0",
  "openpyxl==3.1.5",
  "xlsxwriter==3.2.9"
]

[project.urls]
Homepage = "https://github.com/yourusername/vtu_result_scraper"
Issues = "https://github.com/yourusername/vtu_result_scraper/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
